  holds the baby at the current food level for the duration of the holding, but
  won't top up the baby.  The only way to top up a baby is to feed them when
  STARVING.  Baby communication to care-givers is now much more crucial.

--Touching a property gate that you don't own now gives you an arrow pointing
  to the closest owner.




Server Fixes

--Nurse cost back to 1 (was 2).

--Optional code for counting visually unique objects.

--Fixed glitch where you could transform worn clothing into some other clothing
  type (cloak into ghost costume whith knife).  Fixes #575

--Fixed bug in way held object was being set after SELF action to transform
  clothing (eta decay for held wasn't being set).  Fixed to handle instant-
  decay (1-second auto-decay) when processing SELF action to use object on
  clothing.

--Max flight distance 10,000 tiles.  No more flights to tutorial or d-town.





Version 318    2020-March-19

--Fixed misspelling of ABANDONED for wells.

--Added a priority ranking for temporary home arrows (EXPT/MAP is top,
  LEAD/SUPP is middle, and BABY is low priority).  This prevents less-important
  home arrows from interrupting your more intentional and directed home arrows.
  If you're out actively searching for an expert, you don't need constant
  arrows pointing back to new babies at home.  Fixes #570

--Fixed so that 1-second "instant" transtions can go through instantly if they
  would otherwise block a player action.  1-second transitions are used for
  lots of temporary objects that are used to play a special creation sound
  (example:  cleaning a dirty pad plays a different sound than making a pad
  from scratch).  Fixes #571



Server Fixes

--Fixed to send homeland info for your spawn position.  Fixes #567

--You get +MORE FOOD+ above your head when an action fails due to hungry work.
  Fixes #568

--Nomad Eves (with no well and no homeland) no longer lose their reproduction